# vsfolder

./: 17_Vietnam.geojson  26_Nigeria.geojson  3_India.geojson  3_Kenya copy.geojson  3_Kenya.geojson  3_Kenya_orig.geojson  5_Tanzania.geojson  Experiment Building Completeness.ipynb  Experiment Building GhsPopComparison.ipynb  Experiment Building Report.ipynb  Experiment Building Saturation Kenya.ipynb  Experiment Building Saturation Nigeria.ipynb  Experiment Building Saturation.ipynb  Experiment Roads GhsPopComparison.ipynb  Experiment Roads Report.ipynb  Experiment Roads Saturation India.ipynb  Experiment Roads Saturation Tanzania.ipynb  Experiment Roads Saturation Vietnam.ipynb  Experiment Roads Saturation.ipynb  README.md  blds-download-export-data.ipynb  blds_join_spatial_and_downloaded_data.ipynb  exercises2.ipynb  hello.py  index.html  kombinace layer a indicator.txt  notebooks_stampach.ipynb  notebooks_stampach2.ipynb  pokusy.ipynb  solutions2.ipynb
sotm-2022-workshop-main/: README.md  pyproject.toml  requirements.txt
sotm-2022-workshop-main/docs/: develpment-setup.md
sotm-2022-workshop-main/notebooks/: exercises.ipynb  index.html  italy-florence-quartier-5.geojson  solutions.ipynb
