[project]
name = "notebooks"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "folium==0.12.1",
    "jupyter == 1.0.0",
    "matplotlib == 3.5.3",
    "notebook == 6.4.12",
    "requests == 2.28.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
